# sdl2-game-maker

./: CMakeLists.txt  README.md
include/: node.hpp
src/: CMakeLists.txt  node.cpp
tests/: main.cpp  unit_test.cpp
